[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prefabs/Screens/InformationDisplay.gd" type="Script" id=1]
[ext_resource path="res://Assets/Screens/UItestA.png" type="Texture" id=2]
[ext_resource path="res://Assets/Screens/UItestB.png" type="Texture" id=3]
[ext_resource path="res://Assets/Screens/UItestC.png" type="Texture" id=4]
[ext_resource path="res://Assets/Screens/GUIfont.tres" type="DynamicFont" id=5]

[node name="InformationDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Testing" type="VBoxContainer" parent="."]
margin_left = 999.804
margin_top = 38.5591
margin_right = 1220.8
margin_bottom = 182.559
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Testing"]
margin_right = 221.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "Score
000,000,000"

[node name="HSeparator" type="HSeparator" parent="Testing"]
margin_top = 49.0
margin_right = 221.0
margin_bottom = 53.0

[node name="HighScore" type="Label" parent="Testing"]
margin_top = 57.0
margin_right = 221.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 5 )
text = "High Score
000,000,000"

[node name="HSeparator2" type="HSeparator" parent="Testing"]
margin_top = 106.0
margin_right = 221.0
margin_bottom = 110.0

[node name="ProgressBar" type="ProgressBar" parent="Testing"]
margin_top = 114.0
margin_right = 221.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Testing"]
margin_top = 132.0
margin_right = 221.0
margin_bottom = 133.0

[node name="ReferenceRect" type="ReferenceRect" parent="Testing"]
margin_top = 137.0
margin_right = 221.0
margin_bottom = 137.0

[node name="UItestA" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="UItestB" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="UItestC" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1012.0
margin_top = 496.0
margin_right = 1236.0
margin_bottom = 680.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesContainer" type="HBoxContainer" parent="."]
margin_left = 1014.18
margin_top = 498.369
margin_right = 1091.18
margin_bottom = 512.369
rect_scale = Vector2( 2.3, 1.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="LivesContainer"]
margin_right = 37.0
margin_bottom = 14.0
text = "Lives:"

[node name="Lives" type="Label" parent="LivesContainer"]
margin_left = 41.0
margin_right = 77.0
margin_bottom = 14.0
text = "@@@"

[node name="ScoreContainer" type="VBoxContainer" parent="."]
margin_left = 1020.96
margin_top = 602.352
margin_right = 1100.97
margin_bottom = 634.352
rect_scale = Vector2( 2.45617, 2.11416 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
margin_right = 80.0
margin_bottom = 14.0
text = "Score:"
align = 1

[node name="Score" type="Label" parent="ScoreContainer"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0
text = "0000000000"

[node name="BombContainer" type="HBoxContainer" parent="."]
margin_left = 1024.53
margin_top = 551.945
margin_right = 1107.53
margin_bottom = 565.945
rect_scale = Vector2( 2.3, 1.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombLabel" type="Label" parent="BombContainer"]
margin_right = 49.0
margin_bottom = 14.0
text = "Bombs:"

[node name="Bombs" type="Label" parent="BombContainer"]
margin_left = 53.0
margin_right = 61.0
margin_bottom = 14.0
text = "0"

[node name="StageName" type="Label" parent="."]
visible = false
margin_left = 1024.28
margin_top = 492.498
margin_right = 1096.28
margin_bottom = 506.498
rect_scale = Vector2( 2.3, 1.8 )
text = "StageName"
__meta__ = {
"_edit_use_anchors_": false
}
